<resources>
    <string name="app_name">My Application</string>
    <string name="che168">登录</string>
    <string name="dewu">评论信息</string>
    <string name="reset">reset</string>
    <string name="login">execute</string>
    <string name="username">username:</string>
    <string name="login_che">Login che</string>
    <string name="b_play">播放数据</string>
    <string name="test">test</string>
    <string name="environment_detector">环境检测与反调试</string>
    <string name="execute">execute/refresh</string>
    <string name="vipshop">商品信息</string>
    <string name="frida">frida是否在运行:</string>
    <string name="root">手机是否root:</string>
    <string name="bootLoader">bootLoader是否解锁:</string>
    <string name="difmd5">改良md5</string>
    <string name="encData">数据加密案例</string>
    <string name="github_jni">github jni</string>
    <string name="certifCheck">双向证书校验</string>
    <string name="isProxy">是否在抓包:</string>
    <string name="magiskInstalled">是否安装Magisk:</string>
    <string name="kernelsuInstalled">是否安装KernelSU:</string>
    <string name="phone">电话</string>
    <string name="password">密码</string>
    <string name="forgot_password">重置</string>
    <string name="or">或者</string>
    <string name="google_icon" />
    <string name="facebook_icon" />
    <string name="new_user_register_now">注册</string>
    <string name="top_icon" />
    <string name="fridaGH">frida</string>
    <string name="xposed">xposed</string>
    <string name="dualApp">dualApp</string>
    <string name="emulator">emulator</string>
    <string name="memDump">memDump</string>
    <string name="debug">debug</string>
    <string name="rootGH">root</string>
    <string name="virtualApp">virtualApp</string>
    <string name="magisk">magisk</string>
</resources>