<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#DFF8C1">

            <Button
                android:id="@+id/chezhiying"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_weight="2"
                android:backgroundTint="#770B0B"
                android:text="@string/che168"
                android:layout_margin="16dp"/>

            <Button
                android:id="@+id/dw"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_weight="2"
                android:backgroundTint="#3A0404"
                android:text="@string/dewu"
                android:layout_margin="16dp"/>

            <Button
                android:id="@+id/Bplay"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_weight="2"
                android:backgroundTint="#A5247A"
                android:text="@string/b_play"
                android:layout_margin="16dp"/>

            <Button
                android:id="@+id/test"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_weight="2"
                android:text="@string/test"
                android:layout_margin="16dp"/>

            <Button
                android:id="@+id/envDec"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_weight="2"
                android:backgroundTint="#03556A"
                android:text="@string/environment_detector"
                android:layout_margin="16dp"/>

            <Button
                android:id="@+id/vipshop"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_weight="2"
                android:backgroundTint="#B12051"
                android:text="@string/vipshop"
                android:layout_margin="16dp"/>

            <Button
                android:id="@+id/dif_md5"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_weight="2"
                android:text="@string/difmd5"
                android:layout_margin="16dp"
                android:backgroundTint="#4CAF50"/>

            <Button
                android:id="@+id/enc_args"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_weight="2"
                android:text="@string/encData"
                android:layout_margin="16dp"
                android:backgroundTint="#FF9800"/>

            <Button
                android:id="@+id/certificateVerfy"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_weight="2"
                android:text="@string/certifCheck"
                android:layout_margin="16dp"
                android:backgroundTint="#83C5BB"/>

            <Button
                android:id="@+id/github_jni"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_weight="2"
                android:text="@string/github_jni"
                android:layout_margin="16dp"
                android:backgroundTint="#FFEB3B"/>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>