<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainactivityCZY">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="#dddddd"
        android:layout_marginTop="150dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_che"
            android:textAlignment="center"
            android:textSize="25dp"
            android:layout_marginTop="10dp">

        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <TextView
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:text="@string/username"
                android:gravity="center">
            </TextView>

            <EditText
                android:id="@+id/txt_user"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:singleLine="true"
                android:textSize="14dp">

            </EditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <TextView
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:text="password:"
                android:gravity="center">
            </TextView>

            <EditText
                android:id="@+id/txt_pwd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textSize="14dp">
            </EditText>

        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <Button
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/login">
            </Button>

            <Button
                android:id="@+id/btn_reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/reset">
            </Button>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </LinearLayout>

    </LinearLayout>



</LinearLayout>